# VaultLite

./: .gitignore  CHANGELOG.md  IMPLEMENTATION_SUMMARY.md  LICENSE.txt  QUICKSTART.md  README.md  REQUIREMENTS_CHECKLIST.md  SECURITY.md  VaultLite.sln  build.ps1  build.sh  test.ps1
.github/workflows/: build.yml
VaultLite/: .gitignore  App.xaml  App.xaml.cs  LockDialog.xaml  LockDialog.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  README.md  VaultLite.csproj  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
VaultLite.Tests/: DatabaseTests.cs  EncryptionTests.cs  VaultLite.Tests.csproj
VaultLite/Data/: Database.cs
VaultLite/Models/: Note.cs
VaultLite/Security/: EncryptionService.cs
VaultLite/docs/: PORTABLE_WINDOWS.md
VaultLite/src/: App.tsx  main.tsx  styles.css
VaultLite/src-tauri/: Cargo.toml  tauri.conf.json
VaultLite/src-tauri/capabilities/: default.json
VaultLite/src/components/: Sidebar.tsx
VaultLite/src/database/: client.ts  migrate.ts  schema.sql  seed.sql
VaultLite/src/features/analytics/: AnalyticsPanel.tsx  repository.ts
VaultLite/src/features/developer/: FlowBuilder.tsx  ProductionPatternForm.tsx  repository.ts
VaultLite/src/features/review/: DailyRecall.tsx  ReviewSession.tsx  ReviewSummary.tsx  (+1 more)
VaultLite/src/services/: importExport.ts  search.ts  security.ts  sm2.ts
VaultLite/src/state/: analyticsStore.ts  reviewStore.ts  vaultStore.ts
VaultLite/src/types/: domain.ts
VaultLite/src/utils/: perf.ts
VaultLite/test/: importExport.test.ts  search.test.ts  security.test.ts  sm2.test.ts
(+10 files in other folders)
